<resources>
    <string name="app_name">Week_7</string>
    <string name="user_name">User name</string>
    <string name="enter_password">Enter password</string>
    <string name="conform_password">Conform Password</string>
    <string name="login_in">Login In</string>
    <string name="test_value">0</string>
    <string name="enter_name">Enter name</string>
    <string name="espresso">Espresso</string>
    <string name="second_activity">Second Activity</string>
</resources>