<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_my_espresso">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".my_integration_espresso.MyEspressoActivity">

        <TextView
            android:id="@+id/espresso_TV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/espresso"
            android:textSize="20sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent" />

        <EditText
            android:id="@+id/espresso_ET"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/enter_name"
            android:minHeight="48dp"
            android:textColorHint="#757575"
            app:layout_constraintBottom_toTopOf="@id/gotoSecondActivity_Btn"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/espresso_TV" />

        <Button
            android:id="@+id/gotoSecondActivity_Btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/second_activity"
            app:layout_constraintTop_toBottomOf="@id/espresso_TV"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
